# green_qt

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  Dockerfile  Green.desktop  Green.icns  Info.plist.in  README.md  assets.cmake  blockstream.desktop  build.bat  config.h.in  entitlements.plist  entitlements_debug.plist  green.desktop  green.pro  green.rc  hidapi.pri  installer.iss.in  link.bat  link.sh  production.rc  qml.cmake  qzxing.pri  release.pri  src.cmake  svg2icns.sh  translations.cmake  version.pri
.github/: ISSUE_TEMPLATE.md
.gitlab/issue_templates/: Bug.md
assets/: .gitignore  README.md  assets.pri  assets.qrc  convert_ios.sh  icons.qrc  svg.qrc
assets/icons/: development.icns  generate-icons.sh  green.icns  production.icns
ci/: docker.yaml  lint.yml  linux-x86_64-shared.yml  linux-x86_64.yml  macos-arm64-shared.yml  macos-arm64.yml  macos-universal-shared.yml  macos-universal.yml  macos-x86_64-shared.yml  macos-x86_64.yml  macos.yml  package-shared.yml  package.yml  windows-x86_64-shared.yml  windows-x86_64.yml
ci/codesigntool/: Dockerfile
ci/linux-x86_64/: Dockerfile  bionic.sh  focal.sh  setup.sh
ci/linux-x86_64-shared/: Dockerfile  setup.sh
ci/windows-x86_64/: 24.10.sh  Dockerfile  kinetic.sh  lunar.sh  setup.sh
ci/windows-x86_64-shared/: Dockerfile
ci/x64-windows/: Dockerfile  countly.bat  hidapi.bat  kdsingleapplication.bat  zxing.bat
cmake/: FindCountly.cmake  Findlibgpgme.cmake  Findlibserialport.cmake  mingw-w64-x86_64.cmake
i18n/: green_cs.ts  green_de.ts  green_en.ts  green_es.ts  green_fr.ts  green_he.ts  green_it.ts  green_ja.ts  green_ko.ts  green_nl.ts  green_pt_BR.ts  green_pt_PT.ts  green_ro.ts  green_ru.ts  green_uk.ts  green_vi.ts  green_zh.ts
js/: analytics.js  js.pri  js.qrc
qml/: AboutDialog.qml  AbstractDialog.qml  AbstractDrawer.qml  AccountArchivedBadge.qml  AccountAssetField.qml  AccountAssetPage.qml  AccountAssetSelector.qml  AccountDelegate.qml  AccountFilterPopup.qml  AccountIdBadge.qml  AccountLabel.qml  AccountListView.qml  AccountSelectorPage.qml  AccountTypeBadge.qml  AccountView.qml  AddWalletPage.qml  AddressDelegate.qml  AddressDetailsDrawer.qml  AddressDetailsPage.qml  AddressField.qml  AddressFilterPopup.qml  AddressLabel.qml  AddressTypeLabel.qml  AddressVerifiedBadge.qml  AddressesListView.qml  AlertView.qml  AlreadyRestoredPage.qml  Amount.qml  AmountField.qml  AmountValidator.qml  AnalyticsConsentDialog.qml  AnalyticsConsentPage.qml  AnimLoader.qml  AppBanner.qml  AppPage.qml  AppUpdateBanner.qml  ArchivedAccountsDialog.qml  ArchivedAccountsDrawer.qml  AssetDelegate.qml  AssetDetailsPage.qml  (+352 more)
qml/+windows/: qtquickcontrols2.conf
sa/: kdsingleapplication.h  sa.pri
src/: AccountBalanceGraph.qml  AccountCard.qml  AccountDelegate.qml  AccountIdBadge.qml  AccountListView.qml  AddressField.qml  AmountField.qml  AssetDelegate.qml  AssetIcon.qml  AssetListView.qml  AssetView.qml  BalanceItem.qml  CancelTwoFactorResetDialog.qml  Collapsible.qml  ConnectView.qml  ConnectingView.qml  ControllerDialog.qml  DebugActiveFocus.qml  DebugRectangle.qml  DeviceView.qml  EnableSmsTwoFactorDialog.qml  FeeComboBox.qml  FlatButton.qml  Intro.qml  LoginView.qml  MainMenuBar.qml  MnemonicEditor.qml  MnemonicPage.qml  MnemonicQuizPage.qml  MnemonicQuizView.qml  MnemonicView.qml  OnboardingView.qml  OverviewView.qml  Panel.qml  PinField.qml  QRCode.qml  ReceiveView.qml  RequestTwoFactorResetDialog.qml  RestoreWallet.qml  ReviewView.qml  (+203 more)
src/assets/: assets.qrc  convert_android.sh
src/controllers/: abstractcontroller.cpp  abstractcontroller.h  accountcontroller.cpp  accountcontroller.h  bcurcontroller.cpp  bcurcontroller.h  bumpfeecontroller.cpp  bumpfeecontroller.h  controller.cpp  controller.h  controllers.pri  createaccountcontroller.cpp  createaccountcontroller.h  exportaddressescontroller.cpp  exportaddressescontroller.h  exporttransactionscontroller.cpp  exporttransactionscontroller.h  ledgerdevicecontroller.cpp  ledgerdevicecontroller.h  receiveaddresscontroller.cpp  receiveaddresscontroller.h  renameaccountcontroller.cpp  renameaccountcontroller.h  sendcontroller.cpp  sendcontroller.h  sendtransactioncontroller.cpp  sendtransactioncontroller.h  sessioncontroller.cpp  sessioncontroller.h  signmessagecontroller.cpp  signmessagecontroller.h  systemmessagecontroller.cpp  systemmessagecontroller.h  twofactorcontroller.cpp  twofactorcontroller.h  watchonlycontroller.cpp  watchonlycontroller.h
src/core/: activity.cpp  activity.h  core.pri
src/devices/: abstractdevice.cpp  abstractdevice.h  device.cpp  device.h  ledgernanoxdevice.cpp  ledgernanoxdevice.h
src/dialogs/: AboutDialog.qml  ChangePinDialog.qml  CreateAccountDialog.qml  MnemonicDialog.qml  ReceiveDialog.qml  RenameAccountDialog.qml  SendDialog.qml  TwoFactorLimitDialog.qml  WalletSettingsDialog.qml
src/handlers/: connecthandler.cpp  connecthandler.h  createaccounthandler.cpp  createaccounthandler.h  createtransactionhandler.cpp  createtransactionhandler.h  deletewallethandler.cpp  deletewallethandler.h  getaddresseshandler.cpp  getaddresseshandler.h  getbalancehandler.cpp  getbalancehandler.h  gettransactionshandler.cpp  gettransactionshandler.h  getunspentoutputshandler.cpp  getunspentoutputshandler.h  handler.cpp  handler.h  handlers.pri  loginhandler.cpp  loginhandler.h  registeruserhandler.cpp  registeruserhandler.h  sendtransactionhandler.cpp  sendtransactionhandler.h  signtransactionhandler.cpp  signtransactionhandler.h  (+2 more)
tools/: appimage.sh  bionic_deps.sh  buildbreakpad.sh  buildcountly.sh  buildcrashpad.sh  builddeps.sh  builddmg.sh  buildenvs.sh  buildffmpeg.sh  buildgdk.sh  buildgpgme.sh  buildgreen.sh  buildhidapi.sh  buildicu.sh  buildkdsingleapplication.sh  buildlibcurl.sh  buildlibserialport.sh  buildlibusb.sh  buildqt.sh  buildwininstaller.sh  buildzxing.sh  bump.py  buster_deps.sh  cleandeps.sh  envs.env  macos-staple.sh  osxsign.sh  osxstaple.sh  packdmg.sh  publish.sh  qtversion.env  tag_and_bump.py  travisdotter.sh  win_installer_template.iss
(+73 files in other folders)
